--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,9 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">All Test Suite</th></tr>
-<tr><td><a href="#t0">AcctLoginTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">30,713</td><td></td><td></td></tr>
+<tr><td><a href="#t0">AcctLoginTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">26,348</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AcctLoginTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">TestCases.AcctLoginTest</td><td><a href="#m0">acctLogin</a></td><td rowspan="2">1731094274737</td><td rowspan="2">11491</td></tr><tr class="failedeven"><td><a href="#m1">acctLogin</a></td></tr><tr><th colspan="4">AcctLoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestCases.AcctLoginTest</td><td><a href="#m2">acctLogin</a></td><td rowspan="2">1731094261428</td><td rowspan="2">1786</td></tr><tr class="passedeven"><td><a href="#m3">acctLogin</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AcctLoginTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">TestCases.AcctLoginTest</td><td><a href="#m0">acctLogin</a></td><td rowspan="2">1731133711143</td><td rowspan="2">6078</td></tr><tr class="failedeven"><td><a href="#m1">acctLogin</a></td></tr><tr><th colspan="4">AcctLoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestCases.AcctLoginTest</td><td><a href="#m2">acctLogin</a></td><td rowspan="2">1731133703149</td><td rowspan="2">1804</td></tr><tr class="passedeven"><td><a href="#m3">acctLogin</a></td></tr><tr class="passedodd"><td rowspan="1">TestCases.AcctRegistrationTest</td><td><a href="#m4">acctRegistration</a></td><td rowspan="1">1731133694600</td><td rowspan="1">3300</td></tr></tbody>
 </table>
 <h2>AcctLoginTest</h2><h3 id="m0">TestCases.AcctLoginTest#acctLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>pqrs@gamil.com</td><td>pqrs123</td><td>invalid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: Testcase failed
 	at org.testng.Assert.fail(Assert.java:111)
@@ -73,5 +73,6 @@
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">TestCases.AcctLoginTest#acctLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>dolphin@gamil.com</td><td>dolphin123</td><td>valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">TestCases.AcctLoginTest#acctLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>nextgen@gamil.com</td><td>nextgen123</td><td>valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestCases.AcctRegistrationTest#acctRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
